--- a/conf/config_v1.j2
+++ b/conf/config_v1.j2
@@ -1,4 +1,4 @@
-region: eu-west-2
+region: {{ ws.ec2.region }}
 api_endpoint: http://127.0.0.1:8080/api
 sync_interval_in_seconds: 1
 cloud_provider: AWS
