--- a/conf/config_v2.j2
+++ b/conf/config_v2.j2
@@ -1,4 +1,4 @@
-region: eu-west-2
+region: {{ ws.ec2.region }}
 api_endpoint: http://127.0.0.1:8080/api
 sync_interval_in_seconds: 1
 cloud_provider: AWS
@@ -13,6 +13,14 @@ upstreams:
     slow_start: 0s
   - name: app_two
     autoscaling_group: ngx-oss-two-autoscaling
+    port: 443
+    kind: stream
+    max_conns: 0
+    max_fails: 1
+    fail_timeout: 10s
+    slow_start: 0s
+  - name: app_three
+    autoscaling_group: ngx-oss-three-autoscaling
     port: 443
     kind: stream
     max_conns: 0
