fixing cleaning file snapshot/AMI when region is Paris

--- a/script/cleanup_diff.j2
+++ b/script/cleanup_diff.j2
@@ -2,10 +2,10 @@ cd terraform \
 && terraform init \
 && yes yes | terraform destroy \
 && rm -rf .terraform terraform.* \
-&& aws ec2 deregister-image --region eu-west-3 --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-plus" --region eu-west-3 --query "Images[].ImageId" --output text) \
-&& aws ec2 deregister-image --region eu-west-3 --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-oss" --region eu-west-3 --query "Images[].ImageId" --output text) \
-&& aws ec2 delete-snapshot --region eu-west-3 --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-plus" --region eu-west-3 --query "Snapshots[].SnapshotId" --output text) \
-&& aws ec2 delete-snapshot --region eu-west-3 --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-oss" --region eu-west-3 --query "Snapshots[].SnapshotId" --output text) \
+&& aws ec2 deregister-image --region {{ ws.ec2.region }} --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-plus" --region {{ ws.ec2.region }} --query "Images[].ImageId" --output text) \
+&& aws ec2 deregister-image --region {{ ws.ec2.region }} --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-oss" --region {{ ws.ec2.region }} --query "Images[].ImageId" --output text) \
+&& aws ec2 delete-snapshot --region {{ ws.ec2.region }} --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-plus" --region {{ ws.ec2.region }} --query "Snapshots[].SnapshotId" --output text) \
+&& aws ec2 delete-snapshot --region {{ ws.ec2.region }} --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-oss" --region {{ ws.ec2.region }} --query "Snapshots[].SnapshotId" --output text) \
 && aws ec2 deregister-image --region eu-west-3 --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-plus" --region eu-west-3 --query "Images[].ImageId" --output text) \
 && aws ec2 deregister-image --region eu-west-3 --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-oss" --region eu-west-3 --query "Images[].ImageId" --output text) \
 && aws ec2 delete-snapshot --region eu-west-3 --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-plus" --region eu-west-3 --query "Snapshots[].SnapshotId" --output text) \
