-Adding Ansible visibility on output -New naming convention for AWS object to give more visibilty

--- a/script/cleanup.j2
+++ b/script/cleanup.j2
@@ -5,4 +5,8 @@ cd terraform \
 && aws ec2 deregister-image --region {{ ws.ec2.region }} --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-plus" --region {{ ws.ec2.region }} --query "Images[].ImageId" --output text) \
 && aws ec2 deregister-image --region {{ ws.ec2.region }} --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-oss" --region {{ ws.ec2.region }} --query "Images[].ImageId" --output text) \
 && aws ec2 delete-snapshot --region {{ ws.ec2.region }} --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-plus" --region {{ ws.ec2.region }} --query "Snapshots[].SnapshotId" --output text) \
-&& aws ec2 delete-snapshot --region {{ ws.ec2.region }} --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-oss" --region {{ ws.ec2.region }} --query "Snapshots[].SnapshotId" --output text)
+&& aws ec2 delete-snapshot --region {{ ws.ec2.region }} --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-oss" --region {{ ws.ec2.region }} --query "Snapshots[].SnapshotId" --output text) \
+&& rm {{ playbook_dir }}/conf/config_v1.yaml \
+&& rm {{ playbook_dir }}/conf/config_v2.yaml \
+&& rm {{ playbook_dir }}/packer/setup-instance.sh \
+&& rm {{ playbook_dir }}/script/cleanup.sh
