--- a/script/cleanup_diff.j2
+++ b/script/cleanup_diff.j2
@@ -9,4 +9,8 @@ cd terraform \
 && aws ec2 deregister-image --region eu-west-3 --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-plus" --region eu-west-3 --query "Images[].ImageId" --output text) \
 && aws ec2 deregister-image --region eu-west-3 --image-id $(aws ec2 describe-images --filters "Name=tag:Name,Values=ngx-oss" --region eu-west-3 --query "Images[].ImageId" --output text) \
 && aws ec2 delete-snapshot --region eu-west-3 --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-plus" --region eu-west-3 --query "Snapshots[].SnapshotId" --output text) \
-&& aws ec2 delete-snapshot --region eu-west-3 --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-oss" --region eu-west-3 --query "Snapshots[].SnapshotId" --output text)
+&& aws ec2 delete-snapshot --region eu-west-3 --snapshot-id $(aws ec2 describe-snapshots --filters "Name=tag:Name,Values=ngx-oss" --region eu-west-3 --query "Snapshots[].SnapshotId" --output text) \
+&& rm {{ playbook_dir }}/conf/config_v1.yaml \
+&& rm {{ playbook_dir }}/conf/config_v2.yaml \
+&& rm {{ playbook_dir }}/packer/setup-instance.sh \
+&& rm {{ playbook_dir }}/script/cleanup.sh
